--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             </div>
             
         </nav>
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1><span class="text-primary">Enjoy</span>  Your Stays</h1>
+                    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita quisquam ipsa sapiente voluptates recusandae voluptatibus.</p>
+                    <a class="btn" href="about.html">About Our Hotel</a>
+                </div>
+            </div>
+        </div>
     </header>
     
 </body>
