--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@
         </div>
     </header>
     
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span>Of Our Hotel</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut, modi quasi expedita ea a. Soluta dicta totam commodi, quis possimus sed impedit voluptatum saepe eum hic, iste exercitationem temporibus ab perspiciatis. Expedita omnis cupiditate accusantium modi in libero obcaecati!
+            </p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
 </body>
 </html>
