--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the most Extrordinary Hotel in Darbhanga"> 
     <meta name="keywords" content="hote, darbhanga, darbhanga hotel, bihar best hotel">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Hotel  | Welcome</title>
 </head>
@@ -41,6 +41,22 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut, modi quasi expedita ea a. Soluta dicta totam commodi, quis possimus sed impedit voluptatum saepe eum hic, iste exercitationem temporibus ab perspiciatis. Expedita omnis cupiditate accusantium modi in libero obcaecati!
             </p>
             <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
+
+    <section id="features">
+        <div class="box">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, provident?</p>
+        </div>
+        <div class="box">
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, labore.</p>
+        </div>
+        <div class="box">
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, aliquid!</p>
         </div>
     </section>
 </body>
