--- a/index.html
+++ b/index.html
@@ -45,19 +45,27 @@
     </section>
 
     <section id="features">
-        <div class="box">
+        <div class="box bg-light">
             <i class="fas fa-hotel fa-3x"></i>
             <h3>Great Location</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, provident?</p>
         </div>
-        <div class="box">
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
             <h3>Free Meals</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, labore.</p>
         </div>
-        <div class="box">
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
             <h3>Fitness Room</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, aliquid!</p>
         </div>
     </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+        <p>Hotel Ninjas &copy; 2020, All Rights Reserved</p>
+    </footer>
 </body>
 </html>
