working on about

--- a/about.html
+++ b/about.html
@@ -48,11 +48,12 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum quo nostrum facere minus? Ratione nostrum ex nam cupiditate quasi praesentium quod, vitae aliquam suscipit explicabo aperiam soluta, dolorem repellat quos repellendus optio dolorum quas hic. Voluptates nisi amet blanditiis qui.</p>
             </div>
 
-            <div class="container">
-                <h2 class="l-heading">What Our Guests Say</h2>
+            
                 <div class="testimonial bg-primary">
                     <img src="./img/person-2.jpg" alt="Samanta">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum quo nostrum facere minus? Ratione nostrum ex nam cupiditate quasi praesentium quod, vitae aliquam suscipit explicabo aperiam soluta, dolorem repellat quos repellendus optio dolorum quas hic. Voluptates nisi amet blanditiis qui.</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum quo nostrum facere minus? Ratione nostrum ex nam cupiditate quasi praesentium quod, vitae aliquam suscipit explicabo aperiam soluta, dolorem repellat quos repellendus optio dolorum quas hic. Voluptates nisi amet blanditiis qui.
+                    </p>
                 </div>   
         </div>
     </section>
