--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,26 @@
             </form>
         </div>
     </section>
+
+    <section id="contact-info" class="bg-dark">
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-hotel fa-3x"></i>
+                <h3>Location</h3>
+                <p>Road-no2 shastrinagar Darbhanga</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-phone fa-3x"></i>
+                <h3>Phone Number</h3>
+                <p>+91 9939339399</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-envelope fa-3x"></i>
+                <h3>Email Address</h3>
+                <p>frontdesk@hotelninjas.com</p>
+            </div> 
+        </div>
+    </section>
     
     <footer id="main-footer">
         <p>Hotel Ninjas &copy; 2020, All Rights Reserved</p>
