--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
         
     </header>
     <section id="contact-form" class="py-3">
-        <div id="container">
+        <div class="container">
             <h1 class="l-heading"><span class="text-primary">Contact</span>Us</h1>
             <p>Please fill out the form below to contact us</p>
             <form action="">
