--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="hote, darbhanga, darbhanga hotel, bihar best hotel">
     
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <title>Hotel Ninjas | Welcome</title>
 </head>
 <body>
